refactor: updating UI to match angular material
- refactoring FE to match matrial UX
